--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "A simple Discord bot written in Node.js that assigns roles when you react to messages.",
   "main": "index.js",
+  "repository": "git@github.com:IAmFletcher/discord-bot.git",
   "author": "Fletcher Goss <44245838+IAmFletcher@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
