--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "semistandard": "^14.2.0"
   },
   "dependencies": {
+    "auto-bind": "^2.1.0",
     "mysql": "^2.17.1",
     "ws": "^7.1.2"
   },
