--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^24.9.0",
-    "semistandard": "^14.2.0"
+    "eslint": "^6.5.1",
+    "eslint-config-semistandard": "^15.0.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^24.9.0"
   },
   "dependencies": {
     "auto-bind": "^2.1.0",
     "mysql": "^2.17.1",
     "ws": "^7.1.2"
-  },
-  "semistandard": {
-    "ignore": [
-      "*.test.js"
-    ]
   }
 }
